Issue #210 : Added styling to the scrollbar

--- a/style.css
+++ b/style.css
@@ -467,3 +467,21 @@ footer .quick-links ul li a:hover {
 #header {
   margin-top: 10px;
 }
+
+/*From line 471 to 487 is the code contributed to style the scrollbar*/
+::-webkit-scrollbar{
+  width: 12px;
+}
+
+::-webkit-scrollbar-track{
+  background: rgb(7, 31, 48);
+}
+
+::-webkit-scrollbar-thumb{
+  background: linear-gradient(transparent, #09a0f1);
+  border-radius: 6px;
+}
+
+::-webkit-scrollbar-thumb:hover{
+  background: linear-gradient(transparent, antiquewhite);
+}
