--- a/styleIndex.css
+++ b/styleIndex.css
@@ -528,3 +528,21 @@ margin: 0;
 font-weight: 700;
 color: #28357d;
 }
+
+/*From line 532 to 548 is the code contributed to style the scrollbar"*/
+::-webkit-scrollbar{
+  width: 12px;
+}
+
+::-webkit-scrollbar-track{
+  background: rgb(7, 31, 48);
+}
+
+::-webkit-scrollbar-thumb{
+  background: linear-gradient(transparent, #09a0f1);
+  border-radius: 6px;
+}
+
+::-webkit-scrollbar-thumb:hover{
+  background: linear-gradient(transparent, antiquewhite);
+}
